--- a/src/jclitenet/Views/Shared/_CommentFormPartial.cshtml
+++ b/src/jclitenet/Views/Shared/_CommentFormPartial.cshtml
@@ -65,7 +65,7 @@
 
                 @Html.HiddenFor(m => @Model.Title)
 
-                <div class="clear text-spacer">
+                <div class="clear text-spacer box">
                     @Html.Recaptcha(theme: Recaptcha.Web.RecaptchaTheme.Clean)
                 </div>
 
