Convert to HTML5 button

--- a/src/jclitenet/Views/Shared/_LogOnPartial.cshtml
+++ b/src/jclitenet/Views/Shared/_LogOnPartial.cshtml
@@ -15,9 +15,8 @@
             </div>
            
             <div class="text-spacer">
-                <input type="submit" id="btnLogon" value="Log On" />
+                <button type="submit" id="btnLogon">Log On</button>
             </div>
         }
-
     </fieldset>
 </div>
