--- a/src/jclitenet/Content/Site.css
+++ b/src/jclitenet/Content/Site.css
@@ -6,7 +6,7 @@ to use a different color start by replacing all instances of
 html { }
 body { font: normal 11px/100% sans-serif, "lucida grande", tahoma, verdana, arial; margin: 0; padding: 0; color: #3A4046; background: #e1e0e0 url(images/bg.png) repeat-x; }
 
-input, textarea { color: inherit; text-decoration: inherit; transition: all 0.2s ease-in-out 0.1s; }
+button, input, textarea { color: inherit; text-decoration: inherit; transition: all 0.2s ease-in-out 0.1s; }
 textarea { width: 100%; height: 150px; line-height: 150%; }
 
 a:link { color: #1787D1; text-decoration: none; transition: color 0.2s ease-in-out 0.1s; }
