--- a/src/jclitenet/Views/Shared/_Layout.cshtml
+++ b/src/jclitenet/Views/Shared/_Layout.cshtml
@@ -117,6 +117,15 @@
                         </div>
                         @Html.Partial("_MenuItemsPartial", @ViewBag.RecentPostItems as IEnumerable<SideMenuModelItem>)
                     </div>
+                    <div class="menu-item box">
+                        <div class="menu-title">
+                            <div class="menu-album-icon">
+                                <i class="icon-archive icon-2x"></i>
+                            </div>
+                            <h2>Archive</h2>
+                        </div>
+                        @Html.Partial("_MenuItemsPartial", @ViewBag.Archives as IEnumerable<SideMenuModelItem>)
+                    </div>
                 </div>
             </div>
         </div>
