--- a/src/jclitenet/Views/Shared/_MenuItemsPartial.cshtml
+++ b/src/jclitenet/Views/Shared/_MenuItemsPartial.cshtml
@@ -8,7 +8,11 @@
         <li>
             <a href="@item.Href">
                 <span class="post-title">@item.Title</span><br />
-                <span class="archive-date">@item.Posted.ToLongDateString()</span>
+
+                @if(item.Posted > DateTime.MinValue)
+                {
+                    <span class="archive-date">@item.Posted.ToLongDateString()</span>
+                }
             </a>
         </li>    
     }
