--- a/src/jclitenet/Content/Site.css
+++ b/src/jclitenet/Content/Site.css
@@ -4,7 +4,7 @@ to use a different color start by replacing all instances of
 #5c87b2 with your new color.
 ----------------------------------------------------------*/
 html { }
-body { font: normal 11px/100% sans-serif, "lucida grande", tahoma, verdana, arial; margin: 0; padding: 0; color: #3A4046; background: #e1e0e0 url(images/bg.png) repeat-x; }
+body { font: normal 11px/100% sans-serif, "lucida grande", tahoma, verdana, arial; font-size: margin: 0; padding: 0; color: #3A4046; background: #e1e0e0 url(images/bg.png) repeat-x; }
 
 button, input, textarea { color: inherit; text-decoration: inherit; transition: all 0.2s ease-in-out 0.1s; }
 textarea { width: 100%; height: 150px; line-height: 150%; }
@@ -293,6 +293,7 @@ pre { border: dashed 1px #000; color: black; line-height: 1.1em; padding: 1em; b
 .menu-ads { overflow:hidden; }
 .paging-button { width:100%; height: 24px; text-align:center; background-color:#ccc; line-height:30px; cursor:pointer }
 .paging-button:hover { background-color:#fff; }
+.captcha-warning { font-size:1.3em; color:#777 }
 
 /* Large screens ----------- */
 @media only screen and (min-width : 1824px) {
