--- a/src/jclitenet/Views/Home/MyPortfolio.cshtml
+++ b/src/jclitenet/Views/Home/MyPortfolio.cshtml
@@ -1,9 +1,7 @@
-﻿@{
+﻿@{ 
     ViewBag.Title = "My Portfolio";
-}
+    Layout = "~/Views/Shared/_ngLayout.cshtml"; 
+} 
 
-<script data-main="../assets/js/main" src="~/assets/js/lib/require/require.js"></script>
-<script src="~/assets/js/lib/modernizr/modernizr-2.8.3.js"></script>
-
-<div ng-view>
+<div ui-view>
 </div>
