--- a/src/jclitenet/Views/Shared/_Layout.cshtml
+++ b/src/jclitenet/Views/Shared/_Layout.cshtml
@@ -79,9 +79,9 @@
                     </div>
                 </div>
                 <div id="side_menu" class="box box_shadow">
-                    <div class="menu-item box menu-ads">
+                    @*<div class="menu-item box menu-ads">
                         @Html.Raw((string)CoreFramework4.SiteConfigTool.GetValue<string>("ads_1").ToHtmlDecode())
-                    </div>
+                    </div>*@
                     <div class="menu-item box">
                         <div class="menu-title">
                             <div class="menu-tutorial-icon">
