--- a/src/jclitenet/Views/Shared/_MenuItemsCommentPartial.cshtml
+++ b/src/jclitenet/Views/Shared/_MenuItemsCommentPartial.cshtml
@@ -7,7 +7,7 @@
     {
         <li>
             <a href="@item.Href">
-                <span class="post-title anon-name">@item.Name</span> said something to<br />
+                <span class="post-title anon-name">@item.Name</span> says about<br />
                 <span class="post-title parent-title">@item.Title</span><br />
 
                 @if(item.Posted != DateTime.MinValue)
