--- a/src/jclitenet/Views/Home/MyPortfolio.cshtml
+++ b/src/jclitenet/Views/Home/MyPortfolio.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ 
     ViewBag.Title = "My Portfolio";
     Layout = "~/Views/Shared/_ngLayout.cshtml"; 
-} 
+}
 
-<div ui-view>
+<div id="main-wrapper" ui-view>
 </div>
