--- a/src/jclitenet/Views/Shared/_HeaderPartial.cshtml
+++ b/src/jclitenet/Views/Shared/_HeaderPartial.cshtml
@@ -25,6 +25,7 @@
 @Content.StyleBundle("~/content/themes/base/css")
 @*@Content.StyleBundle("~/content/font-awesome/css")*@
 @Content.ScriptBundle("~/bundles/jquery")
+@Content.ScriptBundle("~/bundles/bootstrap")
 
 @{
     if (@User != null && @User.ToLogonInfo().IsGuest)
