--- a/src/CoreFramework4.Spa.Resources/assets/views/index.html
+++ b/src/CoreFramework4.Spa.Resources/assets/views/index.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div id="info">
-                        <span>Taytay, Philippines | Computer Software</span>
+                        <span editor-setup="address-editor">Taytay, Philippines | Computer Software</span>
                         <div class="label-group">
                             <span class="caption">Latest:</span>
                             <div class="wrapper">
@@ -98,8 +98,8 @@
 
             <section id="introduction" class="profile-box bottom-spacer round-corner">
                 <i class="fa fa-file-text fa-2x"></i><h3>Introduction</h3>
-                <p>
-                    I am Jayson a Lead/Senior Asp.Net Developer. My experiences and work ethics are my assets that allows me to become one of the best developer here in the Philippines. I love pleasing my employers by providing them excellent outputs and above expectation results. One of my greatest strength is the ability to easily adopt different environments and standards that gave me the edge to other developers. In addition to this, I am also a very good listener and a follower that enables me to become a very versatile person whether the position is a lead or just a simple programmer.
+                <p editor-setup="introduction-editor" editor-value="introduction" editor-title="Edit Introduction">
+                    No Value
                 </p>
             </section>
 
