--- a/src/CoreFramework4.Spa.Resources/assets/css/app.css
+++ b/src/CoreFramework4.Spa.Resources/assets/css/app.css
@@ -65,11 +65,13 @@ span.email { color:#337AB7; }
 #profile-summary { overflow:hidden; padding:0; width:100%; display:inline-block; background-color:#fff; position:relative; opacity:0.9; }
 #profile-summary #pic, #summary #profile-summary #pic img { border-radius:5px; /*border-radius:192px;*/ }
 #profile-summary #pic { display:inline-block; float:left; width: 192px; height: 192px; background-color:#827777; margin:20px 20px 20px 20px; }
-#profile-summary #info { padding-right: 10px; margin-top:25px; vertical-align: top; position:relative; overflow: hidden; }
+#profile-summary #info { padding-top:2px; padding-right: 10px; margin-top:25px; vertical-align: top; position:relative; overflow: hidden; }
 
 #profile-summary .profile-wrapper { position:relative; overflow:hidden; }
 #profile-summary:hover .profile-wrapper::before { -webkit-transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,100%,0); transform: scale3d(1.9,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,160%,0); }
 #profile-summary .profile-wrapper::before { pointer-events: none; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; background: #F0E9E9 none repeat scroll 0% 0%; content: ""; transition: transform 0.6s ease 0s; transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0px, -160%, 0px); opacity:.3; }
+
+#introduction p { display:table; }
 
 #profile-summary #info span, #summary #profile-summary #info label { font-size:15px; text-shadow:none; }
 #summary h3 { margin-top: 0px; color: #000; font-size: 20px; margin-bottom:30px; }
@@ -100,3 +102,12 @@ span.email { color:#337AB7; }
 input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px white inset; }
 input:-webkit-autofill:focus { -webkit-box-shadow: 0 0 0px 1000px white inset; }
 .box { background: #FFF none repeat scroll 0% 0%; border-radius: 10px; padding: 10px 20px; box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16); }
+
+/*Editor*/
+.editor-popover .popover-content { padding:1px; cursor:pointer; }
+.editor-popover .popover-content i { padding:0; margin:0; }
+.editor-command { padding: 15px; text-align: right; }
+.editor-body { background-color: #F5F1F1; padding: 20px 15px 25px 15px; border-radius: 4px; }
+.editor-body textarea.long-descripion { min-height:250px; font-size:17px; }
+/*.modal-content .modal-title { font-weight:bold; }*/
+
